--- a/faberlick/index.html
+++ b/faberlick/index.html
@@ -249,9 +249,12 @@
       <section id="main">
         <div class="container">
           <div class="part">
-            <div data-aos="fade-down" data-aos-duration="1000">
-              <img src="assets/images/image-folder/main-image.png" alt="" />
-            </div>
+            <img
+              src="assets/images/image-folder/main-image.png"
+              alt=""
+              data-aos="fade-down"
+              data-aos-duration="1000"
+            />
           </div>
 
           <div class="part">
@@ -282,11 +285,12 @@
         <section id="about_company">
           <div class="container">
             <div class="part">
-              <img
-                src="assets/images/image-folder/about-us-image.png"
-                alt=""
-                data-aos="fade-right"
-              />
+              <iframe
+                src="https://www.youtube.com/embed/ahyMzOvQ5RU"
+                frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
             <div class="part">
               <!-- Main Text -->
@@ -553,13 +557,22 @@
                 <p>
                   Jsem praktikující kosmetoložka s více než 10 lety zkušeností.
                   Pomáhám lidem, aby byli zdraví, zbavili se kožních problémů a
-                  vypadali skvěle v každém věku. Jaké jsou výhody produktů
-                  Faberlic? Veškerá kosmetika jevyrobena z komponent, které
-                  příroda sama stvořila. Pomáhají v péči o pleť, aniž by
-                  ucpávají póry a umožňovaly buňkám dýchat. Faberlic krémy se
-                  nestarají pouze o pokožku, dodávají jí výživu zevnitř a
-                  obohacují ji kyslíkem. Pleť po nanesení peelingů, krémů,
-                  micelárních vod a dalších produktů zevnitř září.
+                  vypadali skvěle v každém věku.
+                </p>
+                <div id="hiddentext1" class="hiddentext">
+                  <p>
+                    Jaké jsou výhody produktů Faberlic? Veškerá kosmetika
+                    jevyrobena z komponent, které příroda sama stvořila.
+                    Pomáhají v péči o pleť, aniž by ucpávají póry a umožňovaly
+                    buňkám dýchat. Faberlic krémy se nestarají pouze o pokožku,
+                    dodávají jí výživu zevnitř a obohacují ji kyslíkem. Pleť po
+                    nanesení peelingů, krémů, micelárních vod a dalších produktů
+                    zevnitř září.
+                  </p>
+                </div>
+                <br />
+                <p id="showtext1" class="showtext">
+                  Přečtěte si více
                 </p>
               </div>
               <div class="expert-review-item">
@@ -574,16 +587,24 @@
                 </h3>
                 <p>
                   Nedávno jsem se seznámila s kosmetickou značkou faberlic.
-                  Vyzkoušela jsem několik produktu a jsem velice spokojená. Ve
-                  svém každodenním životě rada používám podkladovou baze a
-                  makeup. Blue cream vyhrazuje pleť a zvyšuje odolnost make-upu.
-                  Při správném odličování neucpává póry. Makeup oné sérum
-                  foundation poskytuje polotransparentní krytí, lehká textura,
-                  bez pocitu masky na obličeji. Líbila se mi textilní maska na
-                  obličej beauty lab. Super jako express pomůcka, rychle se
-                  aplikují a jemně voní. Po použití pleť je jemná, napnutá a
-                  hydratovaná. Nejvíc rada používám společně s peelingem a s 5
-                  min masáží
+                  Vyzkoušela jsem několik produktu a jsem velice spokojená.
+                </p>
+                <div id="hiddentext2" class="hiddentext">
+                  <p>
+                    Ve svém každodenním životě rada používám podkladovou baze a
+                    makeup. Blue cream vyhrazuje pleť a zvyšuje odolnost
+                    make-upu. Při správném odličování neucpává póry. Makeup oné
+                    sérum foundation poskytuje polotransparentní krytí, lehká
+                    textura, bez pocitu masky na obličeji. Líbila se mi textilní
+                    maska na obličej beauty lab. Super jako express pomůcka,
+                    rychle se aplikují a jemně voní. Po použití pleť je jemná,
+                    napnutá a hydratovaná. Nejvíc rada používám společně s
+                    peelingem a s 5 min masáží
+                  </p>
+                </div>
+                <br />
+                <p id="showtext2" class="showtext">
+                  Přečtěte si více
                 </p>
               </div>
               <div class="expert-review-item">
@@ -598,10 +619,19 @@
                 </h3>
                 <p>
                   Faberlic — kosmetika, kterou bych stoprocentně doporučila!
-                  Jsem klientkou faberlic skoro rok, kosmetikou jsem spokojená.
-                  Jsem fitness trenérkou, proto jsem dlouhou dobu nemohla vybrat
-                  něco na líčení, co by mě nevadilo i během tréninku. Takže
-                  Faberlic byl tým nejlepším výběrem pro mně.
+                  Jsem klientkou faberlic skoro rok, kosmetikou
+                </p>
+                <div id="hiddentext3" class="hiddentext">
+                  <p>
+                    jsem spokojená. Jsem fitness trenérkou, proto jsem dlouhou
+                    dobu nemohla vybrat něco na líčení, co by mě nevadilo i
+                    během tréninku. Takže Faberlic byl tým nejlepším výběrem pro
+                    mně.
+                  </p>
+                </div>
+                <br />
+                <p id="showtext3" class="showtext">
+                  Přečtěte si více
                 </p>
               </div>
               <div class="expert-review-item">
@@ -617,14 +647,21 @@
                 <p>
                   Jsem praktikující kosmetoložka s více než 10 lety zkušeností.
                   Pomáhám lidem, aby byli zdraví, zbavili se kožních problémů a
-                  vypadali skvěle v každém věku. Jaké jsou výhody produktů
-                  Faberlic? Veškerá kosmetika jevyrobena z komponent, které
-                  příroda sama stvořila. Pomáhají v péči o pleť, aniž by
-                  ucpávají póry a umožňovaly buňkám dýchat. Faberlic krémy se
-                  nestarají pouze o pokožku, dodávají jí výživu zevnitř a
-                  obohacují ji kyslíkem. Pleť po nanesení peelingů, krémů,
-                  micelárních vod a dalších produktů zevnitř září.
+                  vypadali skvěle v každém věku.
                 </p>
+                <div class="hiddentext4 hiddentext">
+                  <p>
+                    Jaké jsou výhody produktů Faberlic? Veškerá kosmetika
+                    jevyrobena z komponent, které příroda sama stvořila.
+                    Pomáhají v péči o pleť, aniž by ucpávají póry a umožňovaly
+                    buňkám dýchat. Faberlic krémy se nestarají pouze o pokožku,
+                    dodávají jí výživu zevnitř a obohacují ji kyslíkem. Pleť po
+                    nanesení peelingů, krémů, micelárních vod a dalších produktů
+                    zevnitř září.
+                  </p>
+                </div>
+                <br />
+                <button class="showtext4 showtext">Přečtěte si více</button>
               </div>
             </div>
           </div>
